# pinkgrain

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
Source/: AudioFileLoader.cpp  AudioFileLoader.h  Grain.cpp  Grain.h  GrainEngine.cpp  GrainEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: ADSRControl.cpp  ADSRControl.h  CustomDial.cpp  CustomDial.h  LiveWaveformDisplay.cpp  LiveWaveformDisplay.h  LookAndFeel.cpp  LookAndFeel.h  VolumeControl.cpp  VolumeControl.h  WaveformDisplay.cpp  WaveformDisplay.h  ZoomedWaveformDisplay.cpp  ZoomedWaveformDisplay.h
